--- a/OnionConsumeWebAPI/OnionConsumeWebAPI.csproj
+++ b/OnionConsumeWebAPI/OnionConsumeWebAPI.csproj
@@ -9,9 +9,17 @@
 
   <ItemGroup>
     <Compile Remove="bin\**" />
+    <Compile Remove="Models\DbSettings\**" />
     <Content Remove="bin\**" />
+    <Content Remove="Models\DbSettings\**" />
     <EmbeddedResource Remove="bin\**" />
+    <EmbeddedResource Remove="Models\DbSettings\**" />
     <None Remove="bin\**" />
+    <None Remove="Models\DbSettings\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="ApiService\MongoDbService.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -187,6 +195,7 @@
     <PackageReference Include="bootstrap.chosen" Version="1.0.0" />
     <PackageReference Include="Bootstrap.Datepicker" Version="1.8.0.1" />
     <PackageReference Include="Bootstrap.v3.Datetimepicker.CSS" Version="4.17.49" />
+    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
     <PackageReference Include="jQuery.UI.Combined" Version="1.13.2" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
