--- a/OnionConsumeWebAPI/appsettings.json
+++ b/OnionConsumeWebAPI/appsettings.json
@@ -17,6 +17,10 @@
   "MongoDbSettings": {
     "ConnectionString": "mongodb://192.168.1.99:27017",
     "DatabaseName": "jetwaysmongodb"
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.1.99;Integrated Security=False;Database=JetWaysCore; user id=Jetways;password=Jetways@123; TrustServerCertificate=True"
+  },
+  "IsDev": true
 
-  }
+}
