--- a/OnionArchitectureAPI/appsettings.json
+++ b/OnionArchitectureAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=vinay-it;Integrated Security=true;Initial Catalog=JetWaysCore;TrustServerCertificate=True"
-    "DefaultConnection": "Server=192.168.1.99;Integrated Security=False;Database=JetWaysCore; user id=Jetways;password=Jetways@1234; TrustServerCertificate=True"
+         "DefaultConnection": "Server=192.168.1.99;Integrated Security=False;Database=JetWaysCore; user id=Jetways;password=Jetways@1234; TrustServerCertificate=True"
+    //"DefaultConnection": "Server=192.168.1.104,2021;Integrated Security=False;Database=JetwaysCore; user id=JetwaysCore;password=Jetways@123; TrustServerCertificate=True"
   }
 }
    
