--- a/OnionConsumeWebAPI/appsettings.json
+++ b/OnionConsumeWebAPI/appsettings.json
@@ -11,6 +11,7 @@
     "IsProd": "Y",
 
     "APILocal": "http://localhost:5225/"
+   // "APILocal": "http://192.168.1.104/"
 
   },
 
@@ -20,6 +21,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=192.168.1.99;Integrated Security=False;Database=JetWaysCore; user id=Jetways;password=Jetways@1234; TrustServerCertificate=True"
+    
   },
   "IsDev": true
 
