--- a/OnionConsumeWebAPI/OnionConsumeWebAPI.csproj
+++ b/OnionConsumeWebAPI/OnionConsumeWebAPI.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <None Remove="Views\AATripsell\LoadSeatMapList.cshtml~RF5d63b9e.TMP" />
     <None Remove="Views\AATripsell\_ServiceRequestsPartialView.cshtml~RF76dfc3.TMP" />
+    <None Remove="Views\RoundAATripsell\_ServiceRequestsPartialView.cshtml~RF5febc9.TMP" />
   </ItemGroup>
 
   <ItemGroup>
