--- a/CoporateBooking/appsettings.json
+++ b/CoporateBooking/appsettings.json
@@ -10,8 +10,8 @@
     "AppName": "Web App",
     "IsProd": "Y",
 
-    "APILocal": "http://localhost:5202/"
-   // "APILocal": "http://192.168.1.104/"
+    "APILocal": "http://localhost:5202/",
+    //"APILocal": "http://192.168.1.104/"
 
 
   }
