--- a/OnionConsumeWebAPI/appsettings.json
+++ b/OnionConsumeWebAPI/appsettings.json
@@ -18,10 +18,10 @@
     "ConnectionString": "mongodb://192.168.1.199:27017",
     "DatabaseName": "jetwaysmongodb"
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.99;Integrated Security=False;Database=JetWaysCore; user id=Jetways;password=Jetways@1234; TrustServerCertificate=True"
-    
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=192.168.1.199;Integrated Security=False;Database=JetWaysCore; user id=SuperAdmin;password=Jetways@123; TrustServerCertificate=True"
+
+    },
   "IsDev": true
 
 }
